--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
                 <i class="fa-solid fa-moon"></i>
                 <i class="fa-solid fa-sun"></i>
               </button>
-              <button class="header__nav__right__btns__contact">Contact</button>
+              <div style="display: flex; gap: 20px; width: 100%;">
+                <img src="./imgs/logo-nav.png" alt="">
+                <img src="./imgs/search.png" alt="">
+              </div>
+              
               <button class="header__nav__right__btns__hamburger">
                 <span class="header__nav__right__btns__hamburger__line"></span>
                 <span class="header__nav__right__btns__hamburger__line"></span>
