--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <i class="fa-solid fa-moon"></i>
                 <i class="fa-solid fa-sun"></i>
               </button>
-              <div style="display: flex; gap: 20px; width: 100%;">
+              <div style="display: flex; gap: 20px; width: 100%;object-fit: contain; height: 20px;">
                 <img src="./imgs/logo-nav.png" alt="">
                 <img src="./imgs/search.png" alt="">
               </div>
